--- a/html/webadmin/templates/default.tmpl
+++ b/html/webadmin/templates/default.tmpl
@@ -1,33 +1,48 @@
-<html><head><title>AutoWeb Admin</title></head>
+<html>
+<head><title>AutoWeb Admin</title></head>
 
 <body bgcolor='#ffffff' text='#000000' link='#000070'
-vlink='#000070' alink='#ff000'>
+      vlink='#000070' alink='#ff000'>
 
-<table cellpadding=0 cellspacing=0 border=0 width='100%'>
-<tr><td valign=bottom align=left>
-<a href=http://www.roxen.com/>
-<img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a>
-	    
-</td><td>&nbsp;</td><td width='100%' height=39>
+<table cellpadding=0 cellspacing=0 border=0 width='100%'><tr>
 
-<table cellpadding=0 cellspacing=0 width='100%' border=0>
-<tr width='100%'><td width=100% align=right valigh=center height=28>
-	    
-<b><font size=+1>
-  <formoutput quote='$'>
-    <sqloutput query="select name from customers where id='$customer_id$'">
-      #name#
-    </sqloutput>
-  </formoutput>
-</font></b>
+  <td valign=bottom align=left>
+    <a href=http://www.roxen.com/>
+    <img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a>
+  </td>
 
-</td></tr><tr width='100%'>
-<td bgcolor='#003366' align=right height=12 width='100%'>
-<font color=white size=-2>&nbsp;&nbsp;AutoWeb administration</font></td>
+  <td>
+    &nbsp;
+  </td>
 
-</tr></table></td>
+  <td width='100%' height=39>
+    <table cellpadding=0 cellspacing=0 width='100%' border=0>
+      <tr width='100%'>
+        <td width=100% align=right valigh=center height=28>
+
+          <b><font size=+1>
+            <formoutput quote='$'>
+              <sqloutput query="select name from
+                         customers where id='$customer_id$'">
+                #name#
+              </sqloutput>
+            </formoutput>
+          </font></b>
+
+        </td>
+      </tr>
+      <tr width='100%'>
+        <td bgcolor='#003366' align=right height=12 width='100%'>
+          <font color=white size=-2>
+            &nbsp;&nbsp;AutoWeb administration
+          </font>
+        </td>
+      </tr>
+    </table>
+  </td>
        
-</tr></table><br>
+</tr></table>
+<br>
 
 <config_tablist>
 
@@ -52,11 +67,11 @@ vlink='#000070' alink='#ff000'>
   </else>
 
 </config_tablist>
-<p>
+
+<br>
 
 <tmplinsert tag=tmpl_body>
 
 <br>
 
-</body>
-</html>
+</body></html>
