--- a/templates/tmpl1.tmpl
+++ b/templates/tmpl1.tmpl
@@ -1,8 +1,8 @@
 <html>
-<head><title>Title</title></head>
+<head><title><tmplinsert tag=doctitle></title></head>
 
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'>
-Template 1
-<tmplinsertall>
+<insertnavigation>
+<tmplinsert tag=docdata>
 </body>
