Added a file browser and some basic wizards.
Rev: modules/autoweb/Tab.pmod:1.3
Rev: modules/autoweb/autositefs.pike:1.11
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.2
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/remove.pike:1.2
Rev: modules/autoweb/webadm.pike:1.6
Rev: sites/1/index.html:1.3
Rev: templates/tmpl1.tmpl:1.3

--- a/templates/tmpl1.tmpl
+++ b/templates/tmpl1.tmpl
@@ -4,5 +4,5 @@
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'>
 <insertnavigation>
-<tmplinsert tag=docdata>
+<tmplinsert tag=content>
 </body>
