Improved some wizards
Rev: modules/autoweb/Tab.pmod:1.5
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.6
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.h:1.2
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/upload.pike:1.3
Rev: modules/autoweb/tabs/25:Menu_Editor/page.pike:1.1
Rev: modules/autoweb/templates/default.tmpl:1.2
Rev: modules/autoweb/webadm.pike:1.8
Rev: sites/1/index.html:1.4
Rev: templates/tmpl2.tmpl:1.2

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -8,8 +8,7 @@
 
   <td valign=bottom align=left>
     <a href=http://www.roxen.com/>
-    <img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a>
-  </td>
+    <img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a></td>
 
   <td>
     &nbsp;
