--- a/templates/tmpl2.tmpl
+++ b/templates/tmpl2.tmpl
@@ -1,9 +1,22 @@
 <html>
-<head><title>Title</title></head>
+<head><title>AutoSite Administration Interface</title></head>
+<body bgcolor="#ffffff" link="#00008b" vlink="#00008b" alink="#90ee90" text="#000000">
 
-<body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
-      vlink='$$vlink_color$$' alink='$$alink_color$$'>
+<table cellpadding=0 cellspacing=0 border=0 width='100%'><tr>
 
-Template 2
-<tmplinsertall>
+<td valign=bottom align=left><a href=http://www.roxen.com/><img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a>
+</td>
+<td>&nbsp;</td>
+
+<td width='100%' height=39><table cellpadding=0 cellspacing=0 width='100%' border=0><tr width='100%'><td width=100% align=right valigh=center height=28><b><font size=+1>AutoSite Administration Interface</font></b></td></tr><tr width='100%'><td bgcolor='#003366' align=right height=12 width='100%'><font color="#ffffff" size="-2">Roxen AutoSite&nbsp;&nbsp;
+</td>
+</tr>
+</table>
+</td>
+</tr>
+</table>
+<br>
+Gurka
+
 </body>
+</html>
