Fixed html quote bug and mime encoded the filepath.
Rev: modules/autoweb/Tab.pmod:1.6
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.8
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.6
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.h:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/remove_file.pike:1.2
Rev: modules/autoweb/templates/default.tmpl:1.3
Rev: modules/autoweb/webadm.pike:1.10

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -1,3 +1,7 @@
+<tmplblock tag=error>
+  <font color=darkred>$error$</font><p>
+</tmplblock>
+	
 <html>
 <head><title>AutoWeb Admin</title></head>
 
