--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -2,6 +2,10 @@
   <font color=darkred>$error$</font><p>
 </tmplblock>
 	
+<tmplblock tag=browser>
+  <obox bgcolor=grey>$browser$</obox>
+</tmplblock>
+	
 <html>
 <head><title>AutoWeb Admin</title></head>
 
@@ -49,5 +53,4 @@
 <br>
 
 <tmplinsert tag=tmpl_body>
-
 </body></html>
