Enhanced some wizards
Rev: doc/TODO:1.2
Rev: modules/autoweb/AutoWeb.pmod:1.6
Rev: modules/autoweb/Tab.pmod:1.7
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.10
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.7
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit.pike:1.3
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_directory.pike:1.3
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/new_directory.pike:1.3
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/remove_directory.pike:1.2
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/upload.pike:1.6
Rev: modules/autoweb/templates/default.tmpl:1.5
Rev: templates/nav1.ntmpl:1.2

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -1,5 +1,8 @@
 <tmplblock tag=error>
-  <font color=darkred>$error$</font><p>
+  <table border=0><tr>
+    <td valign=top><img src="/internal-roxen-err_3"></td>
+    <td><font color=darkred>$error$</font></td>
+  </tr></table>
 </tmplblock>
 	
 <tmplblock tag=browser>
