Niced up filebrowser, new icons, more oo.
Rev: modules/autoweb/AutoWeb.pmod:1.7
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.11
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.8
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.pike:1.6
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_directory.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_file.pike:1.2
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/new_directory.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/remove_directory.pike:1.3
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/remove_file.pike:1.3
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/upload.pike:1.7
Rev: modules/autoweb/templates/default.tmpl:1.6
Rev: modules/autoweb/webadm.pike:1.15

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -6,7 +6,7 @@
 </tmplblock>
 	
 <tmplblock tag=browser>
-  <obox bgcolor=grey>$browser$</obox>
+  <obox bgcolor=lightgrey>$browser$</obox>
 </tmplblock>
 	
 <html>
