--- a/templates/tmpl2.tmpl
+++ b/templates/tmpl2.tmpl
@@ -1,25 +1,25 @@
 <tmplblock tag=h1>
   <cset variable=h1_shadow>$$h1_shadow$$</cset>
   <cset variable=shadow></cset>
-  <if variable='h1_shadow is 1'><cset variable=shadow>shadow=60,1</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h1_color$$ nfont=$$h1_font$$
-    %shadow% $$h1_size$$>$h1$</gtext><p></formoutput>
+  <if variable='h1_shadow is 1'><cset variable=shadow>shadow=60,0.1</cset></if>
+  <formoutput quote='%'><p><gtext fg=$$h1_color$$ bg=$$bg_color$$
+    nfont=$$h1_font$$ %shadow% $$h1_size$$>$h1$</gtext><p></formoutput>
 </tmplblock>
 
 <tmplblock tag=h2>
   <cset variable=h2_shadow>$$h2_shadow$$</cset>
   <cset variable=shadow></cset>
-  <if variable='h2_shadow is 1'><cset variable=shadow>shadow=60,1</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h2_color$$ nfont=$$h2_font$$
-    %shadow% $$h2_size$$>$h2$</gtext><p></formoutput>
+  <if variable='h2_shadow is 1'><cset variable=shadow>shadow=60,0</cset></if>
+  <formoutput quote='%'><p><gtext fg=$$h2_color$$ bg=$$bg_color$$
+    nfont=$$h2_font$$ %shadow% $$h2_size$$>$h2$</gtext><p></formoutput>
 </tmplblock>
 
 <tmplblock tag=h3>
   <cset variable=h3_shadow>$$h3_shadow$$</cset>
   <cset variable=shadow></cset>
   <if variable='h3_shadow is 1'><cset variable=shadow>shadow=60,1</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h3_color$$ nfont=$$h3_font$$
-    %shadow% $$h3_size$$>$h3$</gtext><p></formoutput>
+  <formoutput quote='%'><p><gtext fg=$$h3_color$$ bg=$$bg_color$$
+    nfont=$$h3_font$$ %shadow% $$h3_size$$>$h3$</gtext><p></formoutput>
 </tmplblock>
 
 <html>
