--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -36,7 +36,8 @@
 
   <td valign=bottom align=left>
     <a href=http://www.roxen.com/>
-    <img border=0 alt="Roxen" src=/internal-roxen-roxen-icon-gray></a></td>
+    <img width=102 height=40 border=0 alt="Roxen"
+         src=/internal-roxen-roxen-icon-gray></a></td>
 
   <td>
     &nbsp;
