Modifyed some templates.
Rev: templates/img/nav1/alpha.pnm:1.1
Rev: templates/img/nav1/bg1.pnm:1.1
Rev: templates/img/nav1/bg2.pnm:1.1
Rev: templates/img/nav1/bg3.pnm:1.1
Rev: templates/img/nav1/bg4.pnm:1.1
Rev: templates/img/nav1/bg5.pnm:1.1
Rev: templates/img/nav1/plupp.pnm:1.1
Rev: templates/nav1.ntmpl:1.3
Rev: templates/nav2.ntmpl:1.2
Rev: templates/tmpl1.tmpl:1.4
Rev: templates/tmpl2.tmpl:1.5

--- a/templates/tmpl1.tmpl
+++ b/templates/tmpl1.tmpl
@@ -1,8 +1,26 @@
-<html>
-<head><title><tmplinsert tag=doctitle></title></head>
+<include file='gtext_headers.inc'>
 
+<html>
+<head><title><as-meta var=title></title></head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'>
-<insertnavigation>
-<tmplinsert tag=content>
+  <table>
+    <tr>
+      <td>
+        &nbsp;
+      </td>
+      <td>
+	<gtext background=#dddddd alpha='/img/blury_grid_larger.pnm' shaddow=60,0.5><autosite-webadm-customername></gtext>        
+      </td>
+    </tr>
+    <tr>
+      <td valign=top>
+        <include file='$$nav_name$$'>
+      </td>
+      <td valign=top>
+        <tmplinsert tag=content>
+      </td>
+    </tr>
+  </table>
 </body>
+</html>
