--- a/templates/tmpl2.tmpl
+++ b/templates/tmpl2.tmpl
@@ -1,31 +1,10 @@
-<tmplblock tag=h1>
-  <cset variable=h1_shadow>$$h1_shadow$$</cset>
-  <cset variable=shadow></cset>
-  <if variable='h1_shadow is 1'><cset variable=shadow>shadow=60,0.1</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h1_color$$ bg=$$bg_color$$
-    nfont=$$h1_font$$ %shadow% $$h1_size$$>$h1$</gtext><p></formoutput>
-</tmplblock>
-
-<tmplblock tag=h2>
-  <cset variable=h2_shadow>$$h2_shadow$$</cset>
-  <cset variable=shadow></cset>
-  <if variable='h2_shadow is 1'><cset variable=shadow>shadow=60,0</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h2_color$$ bg=$$bg_color$$
-    nfont=$$h2_font$$ %shadow% $$h2_size$$>$h2$</gtext><p></formoutput>
-</tmplblock>
-
-<tmplblock tag=h3>
-  <cset variable=h3_shadow>$$h3_shadow$$</cset>
-  <cset variable=shadow></cset>
-  <if variable='h3_shadow is 1'><cset variable=shadow>shadow=60,1</cset></if>
-  <formoutput quote='%'><p><gtext fg=$$h3_color$$ bg=$$bg_color$$
-    nfont=$$h3_font$$ %shadow% $$h3_size$$>$h3$</gtext><p></formoutput>
-</tmplblock>
-
+<include file='gtext_headers.inc'>
 <html>
 <head><title><as-meta var=title></title></head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'>
+<include file='body.inc'>
+<include file='$$nav_name$$'>
 <tmplinsert tag=content>
 </body>
 </html>
