Rearanged toolbar in template-editor
Rev: modules/autoweb/tabs/10:Template_Editor/page.html:1.8
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/add_to_menu.pike:1.2
Rev: modules/autoweb/templates/default.tmpl:1.10
Rev: modules/autoweb/webadm.pike:1.20

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -1,3 +1,4 @@
+<cset variable=templateeditorp><tmplinsert tag=templateeditorp></cset>
 <cset variable=htmleditorp><tmplinsert tag=htmleditorp></cset>
 <cset variable=menueditorp><tmplinsert tag=menueditorp></cset>
 
@@ -126,6 +127,17 @@
 <if variable="menueditorp is t">
   <tmplinsert tag=content>
   <tmplinsert tag=toolbar>
+  <cset variable=else></cset>
+</if>
+
+<if variable="templateeditorp is t">
+  <tmplinsert tag=content>
+  <if variable=show_menu>
+    <tmplinsert tag=toolbar>
+    <if variable=apply>
+      <b>Active template is applied to the website</b>
+    </if>
+  </if>
   <cset variable=else></cset>
 </if>
 
