Disabled buttons are visible but shaded. Template schemes in db are splitted in two parts
Rev: doc/TODO:1.3
Rev: doc/db.spec:1.15
Rev: modules/admin/actions/20:Add_customer/page.html:1.8
Rev: modules/autoweb/Tab.pmod:1.11
Rev: modules/autoweb/tabs/10:Template_Editor/page.html:1.9
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.16
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_directory.pike:1.5
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_file.pike:1.3
Rev: modules/autoweb/templates/default.tmpl:1.11
Rev: modules/autoweb/webadm.pike:1.21
Rev: sites/1/index.html:1.5
Rev: templates/tmpl1.tmpl:1.5
Rev: tools/templateinfo.html:1.13

--- a/modules/autoweb/templates/default.tmpl
+++ b/modules/autoweb/templates/default.tmpl
@@ -22,12 +22,29 @@
 </else>
 </tmplblock>
 
-<tmplblock tag=toolbarbuttonlayout params=name,href,target singletag>
+<tmplblock tag=toolbarheadinglayout>
+  <tr><td><b>$toolbarheadinglayout$</b></td></tr>
+</tmplblock>
+
+<tmplblock tag=toolbarbuttonlayout params=name,href,target,shade singletag>
 <if variable="htmleditorp is t">
-  <tr><td><gtext xspacing=12 yspacing=3 notrans nfont=helvetica scale=0.35 bold
-       xsize=400 bevel=5 talign=center
-       fg=#ffffff bg=#113377 magic_fg=#000000 magic_bg=#88ccaa
-       magic='$name$' href='$href$' target=$target$>$name$</gtext></td></tr>
+  <if match="$shade$ is ">
+    <tr>
+      <td><gtext
+           xspacing=12 yspacing=3 notrans nfont=helvetica scale=0.35 bold
+           xsize=400 bevel=5 talign=center
+           fg=#ffffff bg=#113377 magic_fg=#000000 magic_bg=#88ccaa
+           magic='$name$' href='$href$' target=$target$>$name$</gtext></td>
+    </tr>
+  </if>
+  <else>
+    <tr>
+      <td><gtext
+           xspacing=12 yspacing=3 notrans nfont=helvetica scale=0.35 bold
+           xsize=400 bevel=5 talign=center
+           fg=#606060 bg=#a0a0a0>$name$</gtext></td>
+    </tr>
+  </else>
 </if>
 <else>
   <td>
