--- a/templates/tmpl1.tmpl
+++ b/templates/tmpl1.tmpl
@@ -10,7 +10,7 @@
         &nbsp;
       </td>
       <td>
-	<gtext background=#dddddd alpha='/img/blury_grid_larger.pnm' shaddow=60,0.5><autosite-webadm-customername></gtext>        
+	<comment><gtext background=#dddddd alpha='/img/blury_grid_larger.pnm' shaddow=60,0.5><autosite-webadm-customername></gtext></comment>        
       </td>
     </tr>
     <tr>
