--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -1,35 +1,53 @@
 <include file='gtext_headers.inc'>
-<comment>Officina Sans bold italic</comment>
+
+<cset variable=bg_img preparse><rimage-id>
+  <layer>
+    <solid width=3000 height=16 color='$$bg_color$$'>
+    <polygon points='25,0,26,0,26,16,25,16' color='$$page_head_bar_color$$'>
+  </layer>
+</rimage-id></cset>
+
+<cset variable=page_head_text_shadow></cset>
+<if match='$$page_head_text_shadow$$ is 1'><cset variable=page_head_text_shadow>shadow=60,0</cset></if>
+
+<formoutput quote='£'>
+
 <html>
 <head><title><as-meta var=title></title></head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'
-      background="/img/Klee/line_back.gif">
+      background="£bg_img£">
   <table border=0 cellpadding=0 cellspacing=0>
     <tr>
       <td><img src="/internal-roxen-unit"></td>
-      <td><img src=/internal-roxen-unit></td>
-      <td width=100% align=right valign=bottom>
-        <gtext scale=0.4 fg=navy nfont=officina_sans crop
-             bold italic><autosite-webadm-customername></gtext>
+      <td><img src="/internal-roxen-unit"></td>
+      <td width=100% align=$$page_head_text_align$$ valign=bottom>
+        <gtext scale=$$page_head_text_size$$ £page_head_text_shadow£
+               fg=$$page_head_text_color$$ afont=$$page_head_text_font$$
+               >$$page_head_text$$</gtext>
       </td>
     </tr>
     <tr>
-      <td bgcolor=$$text_color$$><img src="/internal-roxen-unit"
+      <td bgcolor=$$page_head_bar_color$$><img src="/internal-roxen-unit"
           width=10 height=1></td>
-      <td bgcolor=$$text_color$$><img src="/internal-roxen-unit"></td>
-      <td bgcolor=$$text_color$$><img src="/internal-roxen-unit"></td>
+      <td bgcolor=$$page_head_bar_color$$><img src="/internal-roxen-unit"></td>
+      <td bgcolor=$$page_head_bar_color$$><img src="/internal-roxen-unit"></td>
     </tr>
     <tr>
       <td><img src="/internal-roxen-unit"></td>
       <td><img src="/internal-roxen-unit"></td>
-      <td align=right><img src="/img/Klee/rutor.gif"></td>
+      <td align=$$page_head_image_align$$>
+        <if not match='$$page_head_image$$ is none'>
+	  <img src='$$page_head_image$$'></if></td>
     </tr>
     <tr>
-      <td valign=top><include file='$$nav_name$$'></td>
+      <td valign=top><img src="/internal-roxen-unit" height=80 width=1>
+        <include file='$$nav_name$$'></td>
       <td width=10%>&nbsp;</td>
       <td valign=top><tmplinsert tag=content></td>
     </tr>
   </table>
 </body>
 </html>
+
+</formoutput>
