--- a/templates/night.tmpl
+++ b/templates/night.tmpl
@@ -1,4 +1,7 @@
 <include file='gtext_headers.inc'>
+<include file='shadow.inc'
+
+<formoutput quote='£'>
 
 <html>
 <head><title><as-meta var=title></title></head>
@@ -7,24 +10,25 @@
   <table>
     <tr>
       <td colspan=4>
-	<gtext bg=$$bg_color$$ fg=$$page_head_text_color$$ background="$$page_head_bar_color$$"
-               alpha="/img/night/galler.ppm" talign=right scale=$$page_head_text_size$$
+	<gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
+               background=$$page_head_bar_color$$
+               alpha="/img/night/galler.ppm" talign=$$page_head_text_align$$
+               scale=$$page_head_text_size$$ £page_head_text_shadow£
                afont=$$page_head_text_font$$ rescale>$$page_head_text$$</gtext>
       </td>
     </tr>
-    <tr height=5>
-      <td colspan=4></td>
-    </tr>
     <tr>
-      <td valign=top>
+      <td valign=top><img src=/internal-roxen-unit width=1 height=50>
         <include file='$$nav_name$$'>
       </td>
-      <td width=30> &nbsp; </td>
+      <td width=10%></td>
       <td valign=top>
         <tmplinsert tag=content>
       </td>
-      <td width=100> &nbsp; </td>
+      <td width=10%></td>
     </tr>
   </table>
+
 </body>
 </html>
+</formoutput>
