--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -1,23 +1,24 @@
-<include file='gtext_headers.inc'>
+<include file=gtext_headers.inc>
+<include file=shadow.inc>
+<include file=bg_image.inc>
 
-<cset variable=page_head_text_shadow></cset>
-<if match='$$page_head_text_shadow$$ is 1'><cset variable=page_head_text_shadow>shadow=60,0</cset></if>
-
-<formoutput quote='£'>
+<formoutput quote=£>
 
 <html>
 <head><title><as-meta var=title></title></head>
-<body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
-      vlink='$$vlink_color$$' alink='$$alink_color$$'>
+<body bgcolor=$$bg_color$$ text=$$text_color$$ link=$$link_color$$
+      vlink=$$vlink_color$$ alink=$$alink_color$$ £bg_image£>
   <table cellpadding=0 cellspacing=0 border=0><!--  4 columns  -->
     <tr><!--  slogan  -->
       <td colspan=4 align=$$page_head_text_align$$>
-        <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$ scale=$$page_head_text_size$$
+        <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
+	       scale=$$page_head_text_size$$
 	       £page_head_text_shadow£
                afont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
     </tr>
     <tr><!--  bar  -->
-      <td colspan=4 bgcolor=$$page_head_bar_color$$><img src="/internal-roxen-unit" width=100% height=8></td>
+      <td colspan=4 bgcolor=$$page_head_bar_color$$><img
+        src="/internal-roxen-unit" width=100% height=8></td>
     </tr>
     <tr><!--  image  -->
       <td></td>
@@ -32,9 +33,9 @@
     <tr><!--  Navigation/Content -->
       <td valign=top><img src="/internal-roxen-unit" height=80 width=1>
         <include file='$$nav_name$$'></td>
-      <td width=10%></td>
+      <td width=20%></td>
       <td><tmplinsert tag=content></td>
-      <td width=10% valign=top></td>
+      <td width=20%></td>
     </tr>
   </table>
 </body>
