Font styles are now stored in the new variable *_font_style.
The templates are updated to understand the new font style system.

Rev: templates/Klee.ntmpl:1.4
Rev: templates/Klee.tmpl:1.4
Rev: templates/basic.tmpl:1.3
Rev: templates/dawn.ntmpl:1.2
Rev: templates/gtext_headers.inc:1.4
Rev: templates/night.ntmpl:1.2
Rev: templates/night.tmpl:1.3
Rev: templates/sand.ntmpl:1.3
Rev: templates/sand.tmpl:1.3
Rev: templates/std_navigation_text.inc:1.2

--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -11,8 +11,8 @@
       <td align=$$page_head_text_align$$>
         <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
 	       scale=$$page_head_text_size$$
-	       £page_head_text_shadow£
-               afont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
+	       £page_head_text_shadow£ $$page_head_text_font_style$$
+               nfont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
     </tr>
     <tr>
       <td valign=top><img src="/internal-roxen-unit" height=30 width=1>
