--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -24,8 +24,8 @@
       <td><img src="/internal-roxen-unit"></td>
       <td width=100% align=$$page_head_text_align$$ valign=bottom>
         <gtext scale=$$page_head_text_size$$ £page_head_text_shadow£
-               fg=$$page_head_text_color$$ afont=$$page_head_text_font$$
-               >$$page_head_text$$</gtext>
+               fg=$$page_head_text_color$$ nfont=$$page_head_text_font$$
+               $$page_head_text_font_style$$>$$page_head_text$$</gtext>
       </td>
     </tr>
     <tr>
