--- a/templates/night.tmpl
+++ b/templates/night.tmpl
@@ -11,10 +11,10 @@
     <tr>
       <td colspan=4>
 	<gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
-               background=$$page_head_bar_color$$
+               background=$$page_head_bar_color$$ $$page_head_text_font_style$$
                alpha="/img/night/galler.ppm" talign=$$page_head_text_align$$
                scale=$$page_head_text_size$$ £page_head_text_shadow£
-               afont=$$page_head_text_font$$ rescale>$$page_head_text$$</gtext>
+               nfont=$$page_head_text_font$$ rescale>$$page_head_text$$</gtext>
       </td>
     </tr>
     <tr>
