--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -13,8 +13,8 @@
       <td colspan=4 align=$$page_head_text_align$$>
         <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
 	       scale=$$page_head_text_size$$
-	       £page_head_text_shadow£
-               afont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
+	       £page_head_text_shadow£ $$page_head_text_font_style$$
+               nfont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
     </tr>
     <tr><!--  bar  -->
       <td colspan=4 bgcolor=$$page_head_bar_color$$><img
