--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -1,15 +1,15 @@
 <include file='gtext_headers.inc'>
 
-<cset variable=bg_img preparse><rimage-id>
+<cset variable=bg_image preparse>background=<rimage-id>
   <layer>
     <solid width=3000 height=16 color='$$bg_color$$'>
     <polygon points='25,0,26,0,26,16,25,16' color='$$page_head_bar_color$$'>
   </layer>
 </rimage-id></cset>
 
-<cset variable=page_head_text_shadow></cset>
-<if match='$$page_head_text_shadow$$ is 1'><cset
-  variable=page_head_text_shadow>shadow=60,0</cset></if>
+<cset variable=title_shadow></cset>
+<if match='$$title_shadow$$ is 1'><cset
+  variable=title_shadow>shadow=60,0</cset></if>
 
 <formoutput quote='£'>
 
@@ -17,15 +17,15 @@
 <head><title><as-meta var=title></title></head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
       vlink='$$vlink_color$$' alink='$$alink_color$$'
-      background="£bg_img£">
+      £bg_image£>
   <table border=0 cellpadding=0 cellspacing=0>
     <tr>
       <td><img src="/internal-roxen-unit"></td>
       <td><img src="/internal-roxen-unit"></td>
-      <td width=100% align=$$page_head_text_align$$ valign=bottom>
-        <gtext scale=$$page_head_text_size$$ £page_head_text_shadow£
-               fg=$$page_head_text_color$$ nfont=$$page_head_text_font$$
-               $$page_head_text_font_style$$>$$page_head_text$$</gtext>
+      <td width=100% align=$$title_align$$ valign=bottom>
+        <gtext scale=$$title_size$$ £title_shadow£
+               fg=$$title_color$$ nfont=$$title_font$$
+               $$title_font_style$$><as-meta var=title></gtext>
       </td>
     </tr>
     <tr>
@@ -37,9 +37,7 @@
     <tr>
       <td><img src="/internal-roxen-unit"></td>
       <td><img src="/internal-roxen-unit"></td>
-      <td align=$$page_head_image_align$$>
-        <if not match='$$page_head_image$$ is none'>
-	  <img src='$$page_head_image$$'></if></td>
+      <td align=$$page_head_image_align$$>$$page_head_image$$</td>
     </tr>
     <tr>
       <td valign=top><img src="/internal-roxen-unit" height=80 width=1>
