--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -1,5 +1,6 @@
 <include file=gtext_headers.inc>
 <include file=bg_image.inc>
+
 <formoutput quote='£'>
 <html>
 <head><title><as-meta var=title></title></head>
@@ -8,11 +9,11 @@
   <table>
     <tr>
       <td colspan=2></td>
-      <td align=$$page_head_text_align$$>
-        <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
-	       scale=$$page_head_text_size$$
-	       £page_head_text_shadow£ $$page_head_text_font_style$$
-               nfont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
+      <td align=$$title_align$$>
+        <gtext bg=$$bg_color$$ fg=$$title_color$$
+	       scale=$$title_size$$
+	       £title_shadow£ $$title_font_style$$
+               nfont=$$title_font$$><as-meta var=title></gtext></td>
     </tr>
     <tr>
       <td valign=top><img src="/internal-roxen-unit" height=30 width=1>
@@ -22,6 +23,11 @@
       <td valign=top>
         <tmplinsert tag=content>
       </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td align=$$footer_align$$><insert file=/footer.html</td> 
     </tr>
   </table>
 </body>
