--- a/templates/night.tmpl
+++ b/templates/night.tmpl
@@ -1,20 +1,21 @@
-<include file='gtext_headers.inc'>
-<include file='shadow.inc'
+<include file=gtext_headers.inc>
+<include file=shadow.inc>
+<include file=bg_image.inc>
 
-<formoutput quote='£'>
+<formoutput quote=£>
 
 <html>
 <head><title><as-meta var=title></title></head>
 <body bgcolor='$$bg_color$$' text='$$text_color$$' link='$$link_color$$'
-      vlink='$$vlink_color$$' alink='$$alink_color$$'>
-  <table>
+      vlink='$$vlink_color$$' alink='$$alink_color$$' £bg_image£>
+  <table border=0>
     <tr>
       <td colspan=4>
-	<gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
-               background=$$page_head_bar_color$$ $$page_head_text_font_style$$
-               alpha="/img/night/galler.ppm" talign=$$page_head_text_align$$
-               scale=$$page_head_text_size$$ £page_head_text_shadow£
-               nfont=$$page_head_text_font$$ rescale>$$page_head_text$$</gtext>
+	<gtext bg=$$bg_color$$ fg=$$title_color$$
+               background=$$page_head_bar_color$$ $$title_font_style$$
+               alpha="/img/night/galler.ppm" talign=$$title_align$$
+               scale=$$title_size$$ £title_shadow£
+               nfont=$$title_font$$ rescale><as-meta var=title></gtext>
       </td>
     </tr>
     <tr>
@@ -26,6 +27,13 @@
         <tmplinsert tag=content>
       </td>
       <td width=10%></td>
+    </tr>
+    <tr><td colspan=4 height=10></td></tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td align=$$footer_align$$><insert file=/footer.html></td>
+      <td></td>
     </tr>
   </table>
 
