--- a/templates/sand.tmpl
+++ b/templates/sand.tmpl
@@ -9,12 +9,12 @@
 <body bgcolor=$$bg_color$$ text=$$text_color$$ link=$$link_color$$
       vlink=$$vlink_color$$ alink=$$alink_color$$ £bg_image£>
   <table cellpadding=0 cellspacing=0 border=0><!--  4 columns  -->
-    <tr><!--  slogan  -->
-      <td colspan=4 align=$$page_head_text_align$$>
-        <gtext bg=$$bg_color$$ fg=$$page_head_text_color$$
-	       scale=$$page_head_text_size$$
-	       £page_head_text_shadow£ $$page_head_text_font_style$$
-               nfont=$$page_head_text_font$$>$$page_head_text$$</gtext></td>
+    <tr><!--  title  -->
+      <td colspan=4 align=$$title_align$$>
+        <gtext bg=$$bg_color$$ fg=$$title_color$$
+	       scale=$$title_size$$
+	       £title_shadow£ $$title_font_style$$
+               nfont=$$title_font$$><as-meta var=title></gtext></td>
     </tr>
     <tr><!--  bar  -->
       <td colspan=4 bgcolor=$$page_head_bar_color$$><img
@@ -23,9 +23,7 @@
     <tr><!--  image  -->
       <td></td>
       <td></td>
-      <td colspan=2 align=$$page_head_image_align$$>
-        <if not match='$$page_head_image$$ is none'>
-	  <img src='$$page_head_image$$'></if></td>
+      <td colspan=2>$$page_head_image$$</td>
     </tr>
     <tr>
       <td height=10></td>
