Fixed: bgimage and some other things.
Rev: templates/Klee.tmpl:1.6
Rev: templates/basic.tmpl:1.5
Rev: templates/bg_image.inc:1.3
Rev: templates/dawn.tmpl:1.4
Rev: templates/gtext_headers.inc:1.6
Rev: templates/night.tmpl:1.5
Rev: templates/sand.tmpl:1.5

--- a/templates/Klee.tmpl
+++ b/templates/Klee.tmpl
@@ -1,4 +1,4 @@
-<include file='gtext_headers.inc'>
+<include file='gtext_headers.inc' bg_color=$$bg_color$$>
 
 <cset variable=bg_image preparse>background=<rimage-id>
   <layer>
