Renamed loga.gif to logo.gif.
Rev: templates/basic.tmpl:1.6

--- a/templates/basic.tmpl
+++ b/templates/basic.tmpl
@@ -8,7 +8,7 @@
       vlink='$$vlink_color$$' alink='$$alink_color$$' £bg_image£>
   <table border=0 cellpadding=5 cellspacing=0>
     <tr>
-      <td><img src=/loga.gif alt="">
+      <td><img src=/logo.gif alt="">
         <img src=/internal-roxen-unit width=1 height=1 alt=""></td>
       <td align=$$title_align$$ valign=bottom>
         <gtext bg=$$bg_color$$ fg=$$title_color$$
